<resources>
    <string name="app_name">Museum Audio Trails Team 11</string>
    <string name="historyFeed">History Feed</string>
    <string name="notification">Notification</string>
    <string name="show_beacons">Show Beacons</string>
    <string name="exhibits_history">Exhibits History</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ExhibitA">This is Exhibit A</string>
    <string name="ExhibitB">This is Exhibit B</string>
    <string name="ExhibitC">This is Exhibit C</string>
    <string name="ExhibitD">This is Exhibit D</string>
    <string name="Cardiff">Cardiff</string>
    <string name="CardiffBay">Cardiff Bay</string>
    <string name="Newport">Newport</string>
    <string name="Swansea">Swansea</string>
    <string name="Neath">Neath</string>
    <string name="Skewen">Skewen</string>
    <string name="OpeningTimes">Opening Times</string>
    <string name="MonFri">Mon-Fri:9am-6pm</string>
    <string name="Sat">Sat: 10am-7pm</string>
    <string name="Sun">Sun: Closed</string>
    <string name="AreYouSure">Are you sure you want to delete this item?</string>
    <string name="Yes">Yes</string>
    <string name="YouHaveDeleted">"You have deleted "</string>
    <string name="NoID">No ID associated with that beacon</string>
    <string name="No">No</string>
    <string name="options">Options</string>
    <string name="ItemDeletion">Item Deletion</string>
    <string name="StringURL" translatable="false">http://www.google.com</string>
    <string name="AndroidIntentActionMain" translatable="false">android.intent.action.MAIN</string>
    <string name="comAndroidChromeMain" translatable="false">com.android.chrome/com.android.chrome.Main</string>
    <string name="AndroidIntentCategoryLauncher" translatable="false">android.intent.category.LAUNCHER</string>
    <string name="NoBeaconsFound">No beacons found</string>
    <string name="SuccessfullyAddedData">Successfully Added Data</string>
    <string name="ErrorInsertingData">Error Inserting Data</string>
    // MainActivity:
    <string name="museumGuide">Museum Guide</string>
    // Menu Strings
    <string name="homeItemMenu">Home</string>
    <string name="museumSearchItem">Search</string>
    <string name="mapItem">Map</string>
    // Setting Strings
    <string name="settings">Settings</string>
    <string name="notifications">Notification Settings</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="language_setting">Language Settings</string>
    <string-array name="language_array">
        <item name="english">English</item>
        <item name="welsh">Cymraeg</item>
        <item name="spanish">Espanol</item>
    </string-array>
    // HomeFragment Strings:
    <string name="scanningButton">Scan For Beacons</string>
    <string name="viewHistoryButton">View History</string>
    // SettingsPreference
    <string name="changeLanguage">You have changed language to </string>
</resources>
