<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notifications"
        android:id="@+id/settingsHeader" />
    <Switch
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/show_notifications"
        android:id="@+id/notificationSwitch"
        android:layout_weight="0.00"
        android:layout_margin="20dp"
        android:textSize="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/language_setting"
        android:layout_margin="20dp"
        android:id="@+id/textView2" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:id="@+id/language_spinner"
        android:layout_gravity="right"
        android:entries="@array/spinner_array"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/saveBtn"
        android:layout_gravity="center_horizontal" />
</LinearLayout>